--- a/templates/session/index.html.twig
+++ b/templates/session/index.html.twig
@@ -32,5 +32,5 @@
         </tbody>
     </thead>
 </table>
-{{form(form)}}
+<a href="{{path('CreaProgramme',{id:session.id})}}">Créer un programme de formation</a>
 {% endblock %}
