--- a/templates/session/CreaProgramme.html.twig
+++ b/templates/session/CreaProgramme.html.twig
@@ -1,5 +1,9 @@
 {% extends 'base.html.twig' %}
 {% block body %}
+<p>crea programme</p>
+{{form(formProgramme)}}
+<p>crea module</p>
 {{form(formModule)}}
-    
+<p>crea Categorie</p>
+{{form(formCategorie)}}
 {% endblock %}
