--- a/templates/session/index.html.twig
+++ b/templates/session/index.html.twig
@@ -1,7 +1,11 @@
 {% extends 'base.html.twig' %}
 
 {% block title %}Hello SessionController!{% endblock %}
-
+{% block nav %}
+{{parent()}}
+<a href="{{path('CreaProgramme',{id:session.id})}}">Créer un programme de formation</a>
+<a href="{{path('addStagiaireSess',{id:session.id})}}">Ajouter un stagiaire</a>
+{% endblock %}
 {% block body %}
 <table class="table">
     <thead class="thead-light">
@@ -51,6 +55,5 @@
         </tbody>
     </thead>
 </table>
-<a href="{{path('CreaProgramme',{id:session.id})}}">Créer un programme de formation</a>
-<a href="{{path('addStagiaireSess',{id:session.id})}}">Ajouter un stagiaire</a>
+
 {% endblock %}
