--- a/templates/stagiaire/detailStagiaire.html.twig
+++ b/templates/stagiaire/detailStagiaire.html.twig
@@ -1,8 +1,8 @@
 {% extends 'base.html.twig' %}
 
 {% block title %}Hello StagiaireController!{% endblock %}
-
 {% block body %}
+{% set difference = date("now").diff(date(stagiaire.birth)) %}
 <div class="stagiaire">
     <h1><i class="fas fa-user"></i> Fiche stagiaire</h1>
     <h2>{{stagiaire.prenom}} {{stagiaire.nom}}</h2>
@@ -12,7 +12,7 @@
         {% set sexe = "F" %}
     {% endif %}
     <p>sexe : {{sexe}}</p>
-    <p>Date de naissance : {{stagiaire.birth | date("d/m/Y")}}</p>
+    <p>Date de naissance : {{stagiaire.birth | date("d/m/Y")}} ({{difference.y}} ans)</p>
     <p>ville : {{stagiaire.ville}}</p>
     <p>courriel : {{stagiaire.email}}</p>
     <p>Téléphone : {{stagiaire.phone}}</p>
