--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -18,6 +18,7 @@
         <th scope="col">Nb places réservées</th>
         <th scope="col">places restantes</th>
         <th scope="col">Détail programme</th>
+        <th scope="col">Modifier</th>
     </thead>
     <tbody>
     {% for session in sessions %}
@@ -26,9 +27,10 @@
             <td>{{session.dateDebut | date("d/m/Y")}}</td>
             <td>{{session.dateFin | date("d/m/Y")}}</td>
             <td>{{session.nbPlaces}}</td>
-            <td>{{session.reserves}}</td>
-            <td>{{session.nbPlaces - session.reserves}}</td>
-            <td><a href="{{path('programme',{id:session.id})}}"><i class="fas fa-clipboard"></i></a></td>   
+            <td>{{session.stagiaires | length}}</td>
+            <td>{{session.nbPlaces - session.stagiaires | length}}</td>
+            <td><a href="{{path('programme',{id:session.id})}}"><i class="fas fa-clipboard"></i></a></td>
+            <td><a href="{{path('ModifSession',{id:session.id})}}"><i class="far fa-edit"></i></a></td>   
         </tr>
         {% endfor %}
     </tbody>       
