--- a/templates/session/CreaProgramme.html.twig
+++ b/templates/session/CreaProgramme.html.twig
@@ -1,9 +1,9 @@
 {% extends 'base.html.twig' %}
 {% block body %}
-<p>crea programme</p>
-{{form(formProgramme)}}
-<p>crea module</p>
-{{form(formModule)}}
-<p>crea Categorie</p>
+<h4>crea Categorie</h4>
 {{form(formCategorie)}}
+<h4>crea module</h4>
+{{form(formModule)}}
+<h4>crea programme</h4>
+{{form(formProgramme)}}
 {% endblock %}
