--- a/templates/session/index.html.twig
+++ b/templates/session/index.html.twig
@@ -3,7 +3,7 @@
 {% block title %}Détail session{% endblock %}
 {% block nav %}
 {{parent()}}
-<a href="{{path('CreaProgramme',{id:session.id})}}">Créer un programme de formation</a>
+
 {% endblock %}
 {% block body %}
 <table class="table">
@@ -11,6 +11,11 @@
         <tr>
             <td colspan="2">
                 <h1>{{session.nom}}</h1><span>nb places : {{session.nbPlaces}} - places restantes : {{session.nbPlaces - session.stagiaires | length}} </span>
+                {% if session.programmes | length == 0 %}
+                <a href="{{path('CreaProgramme',{id:session.id})}}">Créer un programme de formation</a>
+                {% else %}
+                <a href="{{path('CreaProgramme',{id:session.id})}}">Ajouter un module</a>
+                {% endif %}
             </td>
         </tr>
         <th scope="col">Module</th>
