--- a/templates/session/createSession.html.twig
+++ b/templates/session/createSession.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Hello StagiaireController!{% endblock %}
+{% block title %}Créer une session de formation{% endblock %}
 
 {% block body %}
 {# {{form(form)}} #}
