--- a/templates/stagiaire/index.html.twig
+++ b/templates/stagiaire/index.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Hello StagiaireController!{% endblock %}
+{% block title %}Liste des stagiaires{% endblock %}
 {% block nav %}
 {{parent()}}
 <a href="{{path('addStagiaire')}}">Ajouter un stagiaire</a>
