--- a/public/css/style.css
+++ b/public/css/style.css
@@ -4,6 +4,9 @@
     display: flex;
     justify-content: space-around;
 }
+img{
+    max-width: 100%;
+}
 .wrapper{
     max-width: 75%;
     margin: auto;
