--- a/templates/stagiaire/detailStagiaire.html.twig
+++ b/templates/stagiaire/detailStagiaire.html.twig
@@ -7,6 +7,9 @@
     <a href="{{path('updateStagiaire',{id:stagiaire.id})}}">Modifier</a>
     <h1><i class="fas fa-user"></i> Fiche stagiaire</h1>
     <h2>{{stagiaire.prenom}} {{stagiaire.nom}}</h2>
+    <div class="avatar">
+        <img src="{{asset('img/'~stagiaire.photo)}}" alt="">
+    </div>
     {% if stagiaire.sexe == 1 %}
         {% set sexe = "M"  %}
     {% else %}
