--- a/templates/stagiaire/detailStagiaire.html.twig
+++ b/templates/stagiaire/detailStagiaire.html.twig
@@ -7,9 +7,11 @@
     <a href="{{path('updateStagiaire',{id:stagiaire.id})}}">Modifier</a>
     <h1><i class="fas fa-user"></i> Fiche stagiaire</h1>
     <h2>{{stagiaire.prenom}} {{stagiaire.nom}}</h2>
+    {% if stagiaire.photo != null %}
     <div class="avatar">
         <img src="{{asset('img/'~stagiaire.photo)}}" alt="">
-    </div>
+    </div>        
+    {% endif %}
     {% if stagiaire.sexe == 1 %}
         {% set sexe = "M"  %}
     {% else %}
