--- a/public/css/style.css
+++ b/public/css/style.css
@@ -31,3 +31,17 @@ img{
     background: #aaa;
     text-align: center;
 }
+.photo{
+    width: 100px;
+}
+.avatar{
+    display: inline-block;
+    width: 100px;
+}
+.prog div:first-child{
+    flex:1;
+    max-width: 800px;
+}
+.prog div:nth-child(2){
+    flex:0;
+}
