--- a/templates/session/index.html.twig
+++ b/templates/session/index.html.twig
@@ -15,7 +15,9 @@
             {% else %}
              - <a href="{{path('CreaProgramme',{id:session.id})}}">Ajouter un module</a>
             {% endif %}
+            <a href="{{path('trombi',{id:session.id})}}">trombi</a>
         </div>
+        
         <table class="table">
             <thead class="thead-light">
                 <th scope="col">Module</th>
