--- a/templates/session/detailStagiaire.html.twig
+++ b/templates/session/detailStagiaire.html.twig
@@ -5,7 +5,7 @@
 {% block body %}
 <div class="stagiaire">
     <h1><i class="fas fa-user"></i> Fiche stagiaire</h1>
-    <h2>{{stagiaire.prenom}} {{stagiaire.nom}}</h2>
+    <h2>{{stagiaire.prenom|capitalize}} {{stagiaire.nom|capitalize}}</h2>
     {% if stagiaire.sexe == 1 %}
         {% set sexe = "M"  %}
     {% else %}
@@ -13,7 +13,7 @@
     {% endif %}
     <p>sexe : {{sexe}}</p>
     <p>Date de naissance : {{stagiaire.birth | date("d/m/Y")}}</p>
-    <p>ville : {{stagiaire.ville}}</p>
+    <p>ville : {{stagiaire.ville|capitalize}}</p>
     <p>courriel : {{stagiaire.email}}</p>
     <p>Téléphone : {{stagiaire.phone}}</p>
     <h2>Session prévues</h2>
