--- a/templates/stagiaire/index.html.twig
+++ b/templates/stagiaire/index.html.twig
@@ -31,7 +31,7 @@
                           <div class="modal-dialog modal-dialog-centered" role="document">
                             <div class="modal-content">
                               <div class="modal-header">
-                                <h5 class="modal-title" id="exampleModalLongTitle">{{stagiaire.nom}} {{stagiaire.prenom}}</h5>
+                                <h5 class="modal-title" id="exampleModalLongTitle">{{stagiaire.nom|capitalize}} {{stagiaire.prenom|capitalize}}</h5>
                                 <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                                   <span aria-hidden="true">&times;</span>
                                 </button>
@@ -69,9 +69,12 @@
                           </div>
                         </div>
                     </td>
-                    <td>{{stagiaire.nom}}</td>
-                    <td>{{stagiaire.prenom}}</td>
-                    <td><a href="{{path('/stagiaire/detailStagiaire',{id:stagiaire.id})}}"><i class="fas fa-user"></i></a></td>
+                    <td>{{stagiaire.nom|capitalize}}</td>
+                    <td>{{stagiaire.prenom|capitalize}}</td>
+                    <td>
+                        <a href="{{path('/stagiaire/detailStagiaire',{id:stagiaire.id})}}"><i class="fas fa-user"></i></a>
+                        <a href="{{path('stagiaire_delete',{id:stagiaire.id})}}"><i class="far fa-trash-alt"></i></a>
+                    </td>
                 </tr>
                 
                 
