--- a/templates/session/index.html.twig
+++ b/templates/session/index.html.twig
@@ -9,13 +9,16 @@
 <div class="flex prog">
     <div>
         <div colspan="2">
-            <h1>{{session.nom}}</h1><span>nb places : {{session.nbPlaces}} - places restantes : {{session.nbPlaces - session.stagiaires | length}} </span>
-            {% if session.programmes | length == 0 %}
-             - <a href="{{path('CreaProgramme',{id:session.id})}}">Créer un programme de formation</a>
-            {% else %}
-             - <a href="{{path('CreaProgramme',{id:session.id})}}">Ajouter un module</a>
-            {% endif %}
-             - <a href="{{path('trombi',{id:session.id})}}">trombi</a>
+            <h1>{{session.nom}}</h1>
+            <div class="mt-4">
+                <span class="rounded mr-4 p-3 mb-2 bg-light text-balck">nb places : {{session.nbPlaces}} - places restantes : {{session.nbPlaces - session.stagiaires | length}} </span>
+                {% if session.programmes | length == 0 %}
+                <a class="rounded mr-4 p-3 mb-2 bg-dark text-white" href="{{path('CreaProgramme',{id:session.id})}}">Créer un programme de formation</a>
+                {% else %}
+                <a class="rounded mr-4 p-3 mb-2 bg-dark text-white" href="{{path('CreaProgramme',{id:session.id})}}">Ajouter un module</a>
+                {% endif %}
+                <a class="rounded mr-4 p-3 mb-2 bg-dark text-white" href="{{path('trombi',{id:session.id})}}">trombi</a>
+            </div>
         </div>
         
         <table class="table">
